# python-fastapi-template

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  start-dev-server.sh  tox.ini
src/app/api/: __init__.py  status.py  user.py
src/app/model/: status_model.py
src/app/services/: user_service.py
tests/: conftest.py
tests/routes/: test_status.py  test_user_authentificated.py  test_user_not_authentificated.py
