[metadata]
name = app
description = demo python app
author = Jan Braunsdorff
license = MIT
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages = find:
install_requires =
    fastapi>=0.75.0
    python-jose[cryptography]>=3.3.0
    passlib[bcrypt]>=1.7.4
python_requires = >=3.9
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    black>=22.1.0
    tox>=3.24

[options.package_data]
app = py.typedcleR

[options.packages.find]
where=src